src/Hsls/ParHsls.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module Hsls.ParHsls
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Hsls.AbsHsls
import Hsls.LexHsls

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '('         { PT _ (TS _ 1)        }
  ')'         { PT _ (TS _ 2)        }
  '*'         { PT _ (TS _ 3)        }
  '+'         { PT _ (TS _ 4)        }
  ','         { PT _ (TS _ 5)        }
  '-'         { PT _ (TS _ 6)        }
  '/'         { PT _ (TS _ 7)        }
  '='         { PT _ (TS _ 8)        }
  'false'     { PT _ (TS _ 9)        }
  'fn'        { PT _ (TS _ 10)       }
  'return'    { PT _ (TS _ 11)       }
  'true'      { PT _ (TS _ 12)       }
  '{'         { PT _ (TS _ 13)       }
  '}'         { PT _ (TS _ 14)       }
  L_doubl     { PT _ (TD _)          }
  L_integ     { PT _ (TI _)          }
  L_LangIdent { PT _ (T_LangIdent _) }

%%

Double  :: { (Hsls.AbsHsls.BNFC'Position, Double) }
Double   : L_doubl  { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Double) }

Integer :: { (Hsls.AbsHsls.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

LangIdent :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.LangIdent) }
LangIdent  : L_LangIdent { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), Hsls.AbsHsls.LangIdent (tokenText $1)) }

ListLangIdent :: { (Hsls.AbsHsls.BNFC'Position, [Hsls.AbsHsls.LangIdent]) }
ListLangIdent
  : {- empty -} { (Hsls.AbsHsls.BNFC'NoPosition, []) }
  | LangIdent { (fst $1, (:[]) (snd $1)) }
  | LangIdent ',' ListLangIdent { (fst $1, (:) (snd $1) (snd $3)) }

Program :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.Program) }
Program
  : ListDecl { (fst $1, Hsls.AbsHsls.AProgram (fst $1) (snd $1)) }

Decl :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.Decl) }
Decl
  : 'fn' Name '(' ListName ')' '{' ListStatement '}' { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), Hsls.AbsHsls.DeclFun (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1)) (snd $2) (snd $4) (snd $7)) }

ListDecl :: { (Hsls.AbsHsls.BNFC'Position, [Hsls.AbsHsls.Decl]) }
ListDecl
  : {- empty -} { (Hsls.AbsHsls.BNFC'NoPosition, []) }
  | Decl ListDecl { (fst $1, (:) (snd $1) (snd $2)) }

Statement :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.Statement) }
Statement
  : 'return' Expr { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), Hsls.AbsHsls.ReturnStatement (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1)) (snd $2)) }
  | Name '=' Expr { (fst $1, Hsls.AbsHsls.AssignStatement (fst $1) (snd $1) (snd $3)) }
  | Expr { (fst $1, Hsls.AbsHsls.ExprStatement (fst $1) (snd $1)) }

ListStatement :: { (Hsls.AbsHsls.BNFC'Position, [Hsls.AbsHsls.Statement]) }
ListStatement
  : {- empty -} { (Hsls.AbsHsls.BNFC'NoPosition, []) }
  | Statement ListStatement { (fst $1, (:) (snd $1) (snd $2)) }

Expr :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.Expr) }
Expr
  : Name '(' ListExpr ')' { (fst $1, Hsls.AbsHsls.FnCall (fst $1) (snd $1) (snd $3)) }
  | 'true' { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), Hsls.AbsHsls.ConstTrue (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1))) }
  | 'false' { (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1), Hsls.AbsHsls.ConstFalse (uncurry Hsls.AbsHsls.BNFC'Position (tokenLineCol $1))) }
  | Integer { (fst $1, Hsls.AbsHsls.ConstInt (fst $1) (snd $1)) }
  | Double { (fst $1, Hsls.AbsHsls.ConstDouble (fst $1) (snd $1)) }
  | Name { (fst $1, Hsls.AbsHsls.Var (fst $1) (snd $1)) }
  | Expr '+' Expr { (fst $1, Hsls.AbsHsls.Sum (fst $1) (snd $1) (snd $3)) }
  | Expr '-' Expr { (fst $1, Hsls.AbsHsls.Sub (fst $1) (snd $1) (snd $3)) }
  | Expr '*' Expr { (fst $1, Hsls.AbsHsls.Mul (fst $1) (snd $1) (snd $3)) }
  | Expr '/' Expr { (fst $1, Hsls.AbsHsls.Div (fst $1) (snd $1) (snd $3)) }

ListExpr :: { (Hsls.AbsHsls.BNFC'Position, [Hsls.AbsHsls.Expr]) }
ListExpr
  : {- empty -} { (Hsls.AbsHsls.BNFC'NoPosition, []) }
  | Expr { (fst $1, (:[]) (snd $1)) }
  | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

Name :: { (Hsls.AbsHsls.BNFC'Position, Hsls.AbsHsls.Name) }
Name
  : LangIdent { (fst $1, Hsls.AbsHsls.HslsName (fst $1) (snd $1)) }

ListName :: { (Hsls.AbsHsls.BNFC'Position, [Hsls.AbsHsls.Name]) }
ListName
  : {- empty -} { (Hsls.AbsHsls.BNFC'NoPosition, []) }
  | Name { (fst $1, (:[]) (snd $1)) }
  | Name ',' ListName { (fst $1, (:) (snd $1) (snd $3)) }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Hsls.AbsHsls.Program
pProgram = fmap snd . pProgram_internal
}
