src/Hsls/ParHsls.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Hsls/ParHsls.y
-----------------------------------------------------------------------------

state 38 contains 4 shift/reduce conflicts.
state 39 contains 4 shift/reduce conflicts.
state 40 contains 4 shift/reduce conflicts.
state 41 contains 4 shift/reduce conflicts.

rule 4 is unused
rule 5 is unused
rule 6 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Double -> L_doubl                                  (1)
	Integer -> L_integ                                 (2)
	LangIdent -> L_LangIdent                           (3)
	ListLangIdent ->                                   (4)
	ListLangIdent -> LangIdent                         (5)
	ListLangIdent -> LangIdent ',' ListLangIdent       (6)
	Program -> ListDecl                                (7)
	Decl -> 'fn' Name '(' ListName ')' '{' ListStatement '}'   (8)
	ListDecl ->                                        (9)
	ListDecl -> Decl ListDecl                          (10)
	Statement -> 'return' Expr                         (11)
	Statement -> Name '=' Expr                         (12)
	Statement -> Expr                                  (13)
	ListStatement ->                                   (14)
	ListStatement -> Statement ListStatement           (15)
	Expr -> Name '(' ListExpr ')'                      (16)
	Expr -> 'true'                                     (17)
	Expr -> 'false'                                    (18)
	Expr -> Integer                                    (19)
	Expr -> Double                                     (20)
	Expr -> Name                                       (21)
	Expr -> Expr '+' Expr                              (22)
	Expr -> Expr '-' Expr                              (23)
	Expr -> Expr '*' Expr                              (24)
	Expr -> Expr '/' Expr                              (25)
	ListExpr ->                                        (26)
	ListExpr -> Expr                                   (27)
	ListExpr -> Expr ',' ListExpr                      (28)
	Name -> LangIdent                                  (29)
	ListName ->                                        (30)
	ListName -> Name                                   (31)
	ListName -> Name ',' ListName                      (32)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'/'            { PT _ (TS _ 7) }
	'='            { PT _ (TS _ 8) }
	'false'        { PT _ (TS _ 9) }
	'fn'           { PT _ (TS _ 10) }
	'return'       { PT _ (TS _ 11) }
	'true'         { PT _ (TS _ 12) }
	'{'            { PT _ (TS _ 13) }
	'}'            { PT _ (TS _ 14) }
	L_doubl        { PT _ (TD _) }
	L_integ        { PT _ (TI _) }
	L_LangIdent    { PT _ (T_LangIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Double          rule  1
	Integer         rule  2
	LangIdent       rule  3
	ListLangIdent   rules 4, 5, 6
	Program         rule  7
	Decl            rule  8
	ListDecl        rules 9, 10
	Statement       rules 11, 12, 13
	ListStatement   rules 14, 15
	Expr            rules 16, 17, 18, 19, 20, 21, 22, 23, 24, 25
	ListExpr        rules 26, 27, 28
	Name            rule  29
	ListName        rules 30, 31, 32

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'fn'           shift, and enter state 6
	%eof           reduce using rule 9

	Program        goto state 3
	Decl           goto state 4
	ListDecl       goto state 5

State 1

	Double -> . L_doubl                                 (rule 1)

	L_doubl        shift, and enter state 2


State 2

	Double -> L_doubl .                                 (rule 1)

	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	'false'        reduce using rule 1
	'return'       reduce using rule 1
	'true'         reduce using rule 1
	'}'            reduce using rule 1
	L_doubl        reduce using rule 1
	L_integ        reduce using rule 1
	L_LangIdent    reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListDecl -> Decl . ListDecl                         (rule 10)

	'fn'           shift, and enter state 6
	%eof           reduce using rule 9

	Decl           goto state 4
	ListDecl       goto state 10

State 5

	Program -> ListDecl .                               (rule 7)

	%eof           reduce using rule 7


State 6

	Decl -> 'fn' . Name '(' ListName ')' '{' ListStatement '}'    (rule 8)

	L_LangIdent    shift, and enter state 9

	LangIdent      goto state 7
	Name           goto state 8

State 7

	Name -> LangIdent .                                 (rule 29)

	'('            reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'/'            reduce using rule 29
	'='            reduce using rule 29
	'false'        reduce using rule 29
	'return'       reduce using rule 29
	'true'         reduce using rule 29
	'}'            reduce using rule 29
	L_doubl        reduce using rule 29
	L_integ        reduce using rule 29
	L_LangIdent    reduce using rule 29


State 8

	Decl -> 'fn' Name . '(' ListName ')' '{' ListStatement '}'    (rule 8)

	'('            shift, and enter state 11


State 9

	LangIdent -> L_LangIdent .                          (rule 3)

	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'='            reduce using rule 3
	'false'        reduce using rule 3
	'return'       reduce using rule 3
	'true'         reduce using rule 3
	'}'            reduce using rule 3
	L_doubl        reduce using rule 3
	L_integ        reduce using rule 3
	L_LangIdent    reduce using rule 3


State 10

	ListDecl -> Decl ListDecl .                         (rule 10)

	%eof           reduce using rule 10


State 11

	Decl -> 'fn' Name '(' . ListName ')' '{' ListStatement '}'    (rule 8)

	')'            reduce using rule 30
	L_LangIdent    shift, and enter state 9

	LangIdent      goto state 7
	Name           goto state 12
	ListName       goto state 13

State 12

	ListName -> Name .                                  (rule 31)
	ListName -> Name . ',' ListName                     (rule 32)

	')'            reduce using rule 31
	','            shift, and enter state 15


State 13

	Decl -> 'fn' Name '(' ListName . ')' '{' ListStatement '}'    (rule 8)

	')'            shift, and enter state 14


State 14

	Decl -> 'fn' Name '(' ListName ')' . '{' ListStatement '}'    (rule 8)

	'{'            shift, and enter state 17


State 15

	ListName -> Name ',' . ListName                     (rule 32)

	')'            reduce using rule 30
	L_LangIdent    shift, and enter state 9

	LangIdent      goto state 7
	Name           goto state 12
	ListName       goto state 16

State 16

	ListName -> Name ',' ListName .                     (rule 32)

	')'            reduce using rule 32


State 17

	Decl -> 'fn' Name '(' ListName ')' '{' . ListStatement '}'    (rule 8)

	'false'        shift, and enter state 24
	'return'       shift, and enter state 25
	'true'         shift, and enter state 26
	'}'            reduce using rule 14
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Statement      goto state 20
	ListStatement  goto state 21
	Expr           goto state 22
	Name           goto state 23

State 18

	Expr -> Double .                                    (rule 20)

	')'            reduce using rule 20
	'*'            reduce using rule 20
	'+'            reduce using rule 20
	','            reduce using rule 20
	'-'            reduce using rule 20
	'/'            reduce using rule 20
	'false'        reduce using rule 20
	'return'       reduce using rule 20
	'true'         reduce using rule 20
	'}'            reduce using rule 20
	L_doubl        reduce using rule 20
	L_integ        reduce using rule 20
	L_LangIdent    reduce using rule 20


State 19

	Expr -> Integer .                                   (rule 19)

	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'/'            reduce using rule 19
	'false'        reduce using rule 19
	'return'       reduce using rule 19
	'true'         reduce using rule 19
	'}'            reduce using rule 19
	L_doubl        reduce using rule 19
	L_integ        reduce using rule 19
	L_LangIdent    reduce using rule 19


State 20

	ListStatement -> Statement . ListStatement          (rule 15)

	'false'        shift, and enter state 24
	'return'       shift, and enter state 25
	'true'         shift, and enter state 26
	'}'            reduce using rule 14
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Statement      goto state 20
	ListStatement  goto state 37
	Expr           goto state 22
	Name           goto state 23

State 21

	Decl -> 'fn' Name '(' ListName ')' '{' ListStatement . '}'    (rule 8)

	'}'            shift, and enter state 36


State 22

	Statement -> Expr .                                 (rule 13)
	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	'*'            shift, and enter state 32
	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'/'            shift, and enter state 35
	'false'        reduce using rule 13
	'return'       reduce using rule 13
	'true'         reduce using rule 13
	'}'            reduce using rule 13
	L_doubl        reduce using rule 13
	L_integ        reduce using rule 13
	L_LangIdent    reduce using rule 13


State 23

	Statement -> Name . '=' Expr                        (rule 12)
	Expr -> Name . '(' ListExpr ')'                     (rule 16)
	Expr -> Name .                                      (rule 21)

	'('            shift, and enter state 30
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	'='            shift, and enter state 31
	'false'        reduce using rule 21
	'return'       reduce using rule 21
	'true'         reduce using rule 21
	'}'            reduce using rule 21
	L_doubl        reduce using rule 21
	L_integ        reduce using rule 21
	L_LangIdent    reduce using rule 21


State 24

	Expr -> 'false' .                                   (rule 18)

	')'            reduce using rule 18
	'*'            reduce using rule 18
	'+'            reduce using rule 18
	','            reduce using rule 18
	'-'            reduce using rule 18
	'/'            reduce using rule 18
	'false'        reduce using rule 18
	'return'       reduce using rule 18
	'true'         reduce using rule 18
	'}'            reduce using rule 18
	L_doubl        reduce using rule 18
	L_integ        reduce using rule 18
	L_LangIdent    reduce using rule 18


State 25

	Statement -> 'return' . Expr                        (rule 11)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 28
	Name           goto state 29

State 26

	Expr -> 'true' .                                    (rule 17)

	')'            reduce using rule 17
	'*'            reduce using rule 17
	'+'            reduce using rule 17
	','            reduce using rule 17
	'-'            reduce using rule 17
	'/'            reduce using rule 17
	'false'        reduce using rule 17
	'return'       reduce using rule 17
	'true'         reduce using rule 17
	'}'            reduce using rule 17
	L_doubl        reduce using rule 17
	L_integ        reduce using rule 17
	L_LangIdent    reduce using rule 17


State 27

	Integer -> L_integ .                                (rule 2)

	')'            reduce using rule 2
	'*'            reduce using rule 2
	'+'            reduce using rule 2
	','            reduce using rule 2
	'-'            reduce using rule 2
	'/'            reduce using rule 2
	'false'        reduce using rule 2
	'return'       reduce using rule 2
	'true'         reduce using rule 2
	'}'            reduce using rule 2
	L_doubl        reduce using rule 2
	L_integ        reduce using rule 2
	L_LangIdent    reduce using rule 2


State 28

	Statement -> 'return' Expr .                        (rule 11)
	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	'*'            shift, and enter state 32
	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'/'            shift, and enter state 35
	'false'        reduce using rule 11
	'return'       reduce using rule 11
	'true'         reduce using rule 11
	'}'            reduce using rule 11
	L_doubl        reduce using rule 11
	L_integ        reduce using rule 11
	L_LangIdent    reduce using rule 11


State 29

	Expr -> Name . '(' ListExpr ')'                     (rule 16)
	Expr -> Name .                                      (rule 21)

	'('            shift, and enter state 30
	')'            reduce using rule 21
	'*'            reduce using rule 21
	'+'            reduce using rule 21
	','            reduce using rule 21
	'-'            reduce using rule 21
	'/'            reduce using rule 21
	'false'        reduce using rule 21
	'return'       reduce using rule 21
	'true'         reduce using rule 21
	'}'            reduce using rule 21
	L_doubl        reduce using rule 21
	L_integ        reduce using rule 21
	L_LangIdent    reduce using rule 21


State 30

	Expr -> Name '(' . ListExpr ')'                     (rule 16)

	')'            reduce using rule 26
	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 43
	ListExpr       goto state 44
	Name           goto state 29

State 31

	Statement -> Name '=' . Expr                        (rule 12)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 42
	Name           goto state 29

State 32

	Expr -> Expr '*' . Expr                             (rule 24)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 41
	Name           goto state 29

State 33

	Expr -> Expr '+' . Expr                             (rule 22)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 40
	Name           goto state 29

State 34

	Expr -> Expr '-' . Expr                             (rule 23)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 39
	Name           goto state 29

State 35

	Expr -> Expr '/' . Expr                             (rule 25)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 38
	Name           goto state 29

State 36

	Decl -> 'fn' Name '(' ListName ')' '{' ListStatement '}' .    (rule 8)

	'fn'           reduce using rule 8
	%eof           reduce using rule 8


State 37

	ListStatement -> Statement ListStatement .          (rule 15)

	'}'            reduce using rule 15


State 38

	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)
	Expr -> Expr '/' Expr .                             (rule 25)

	')'            reduce using rule 25
	'*'            shift, and enter state 32
			(reduce using rule 25)

	'+'            shift, and enter state 33
			(reduce using rule 25)

	','            reduce using rule 25
	'-'            shift, and enter state 34
			(reduce using rule 25)

	'/'            shift, and enter state 35
			(reduce using rule 25)

	'false'        reduce using rule 25
	'return'       reduce using rule 25
	'true'         reduce using rule 25
	'}'            reduce using rule 25
	L_doubl        reduce using rule 25
	L_integ        reduce using rule 25
	L_LangIdent    reduce using rule 25


State 39

	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr '-' Expr .                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	')'            reduce using rule 23
	'*'            shift, and enter state 32
			(reduce using rule 23)

	'+'            shift, and enter state 33
			(reduce using rule 23)

	','            reduce using rule 23
	'-'            shift, and enter state 34
			(reduce using rule 23)

	'/'            shift, and enter state 35
			(reduce using rule 23)

	'false'        reduce using rule 23
	'return'       reduce using rule 23
	'true'         reduce using rule 23
	'}'            reduce using rule 23
	L_doubl        reduce using rule 23
	L_integ        reduce using rule 23
	L_LangIdent    reduce using rule 23


State 40

	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr '+' Expr .                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	')'            reduce using rule 22
	'*'            shift, and enter state 32
			(reduce using rule 22)

	'+'            shift, and enter state 33
			(reduce using rule 22)

	','            reduce using rule 22
	'-'            shift, and enter state 34
			(reduce using rule 22)

	'/'            shift, and enter state 35
			(reduce using rule 22)

	'false'        reduce using rule 22
	'return'       reduce using rule 22
	'true'         reduce using rule 22
	'}'            reduce using rule 22
	L_doubl        reduce using rule 22
	L_integ        reduce using rule 22
	L_LangIdent    reduce using rule 22


State 41

	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr '*' Expr .                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	')'            reduce using rule 24
	'*'            shift, and enter state 32
			(reduce using rule 24)

	'+'            shift, and enter state 33
			(reduce using rule 24)

	','            reduce using rule 24
	'-'            shift, and enter state 34
			(reduce using rule 24)

	'/'            shift, and enter state 35
			(reduce using rule 24)

	'false'        reduce using rule 24
	'return'       reduce using rule 24
	'true'         reduce using rule 24
	'}'            reduce using rule 24
	L_doubl        reduce using rule 24
	L_integ        reduce using rule 24
	L_LangIdent    reduce using rule 24


State 42

	Statement -> Name '=' Expr .                        (rule 12)
	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)

	'*'            shift, and enter state 32
	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'/'            shift, and enter state 35
	'false'        reduce using rule 12
	'return'       reduce using rule 12
	'true'         reduce using rule 12
	'}'            reduce using rule 12
	L_doubl        reduce using rule 12
	L_integ        reduce using rule 12
	L_LangIdent    reduce using rule 12


State 43

	Expr -> Expr . '+' Expr                             (rule 22)
	Expr -> Expr . '-' Expr                             (rule 23)
	Expr -> Expr . '*' Expr                             (rule 24)
	Expr -> Expr . '/' Expr                             (rule 25)
	ListExpr -> Expr .                                  (rule 27)
	ListExpr -> Expr . ',' ListExpr                     (rule 28)

	')'            reduce using rule 27
	'*'            shift, and enter state 32
	'+'            shift, and enter state 33
	','            shift, and enter state 46
	'-'            shift, and enter state 34
	'/'            shift, and enter state 35


State 44

	Expr -> Name '(' ListExpr . ')'                     (rule 16)

	')'            shift, and enter state 45


State 45

	Expr -> Name '(' ListExpr ')' .                     (rule 16)

	')'            reduce using rule 16
	'*'            reduce using rule 16
	'+'            reduce using rule 16
	','            reduce using rule 16
	'-'            reduce using rule 16
	'/'            reduce using rule 16
	'false'        reduce using rule 16
	'return'       reduce using rule 16
	'true'         reduce using rule 16
	'}'            reduce using rule 16
	L_doubl        reduce using rule 16
	L_integ        reduce using rule 16
	L_LangIdent    reduce using rule 16


State 46

	ListExpr -> Expr ',' . ListExpr                     (rule 28)

	')'            reduce using rule 26
	'false'        shift, and enter state 24
	'true'         shift, and enter state 26
	L_doubl        shift, and enter state 2
	L_integ        shift, and enter state 27
	L_LangIdent    shift, and enter state 9

	Double         goto state 18
	Integer        goto state 19
	LangIdent      goto state 7
	Expr           goto state 43
	ListExpr       goto state 47
	Name           goto state 29

State 47

	ListExpr -> Expr ',' ListExpr .                     (rule 28)

	')'            reduce using rule 28


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 33
Number of terminals: 17
Number of non-terminals: 14
Number of states: 48
